--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.servlet.multipart.max-request-size=5MB
 server.port = 8080
 show-sql=true
 DriverClassName = com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/projectfinal?serverTimezone=UTC
+url=jdbc:mysql://localhost:3306/projectfinal?serverTimezone=UTC&characterEncoding=UTF-8
 name=root
 #password=password
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
