created role + update getAllTag

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ show-sql=true
 DriverClassName = com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/projectfinal?serverTimezone=UTC&characterEncoding=UTF-8
 name=root
-password=123456
+#password=123456
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.hbm2ddl.auto=update
 charSet=utf8
