--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,11 @@ spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 server.port = 8080
 show-sql=true
-DriverClassName = com.mysql.jdbc.Driver
+DriverClassName = com.mysql.cj.jdbc.Driver
 url=jdbc:mysql://localhost:3306/projectfinal?serverTimezone=UTC&characterEncoding=UTF-8
 name=root
-#password=1234
-hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#password=123456
+hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 hibernate.hbm2ddl.auto=update
 charSet=utf8
 characterEncoding=utf8
