--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ show-sql=true
 DriverClassName = com.mysql.cj.jdbc.Driver
 url=jdbc:mysql://localhost:3306/projectfinal?serverTimezone=UTC&characterEncoding=UTF-8
 name=root
-#password=123456
+password=123456
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 hibernate.hbm2ddl.auto=update
 charSet=utf8
@@ -15,3 +15,12 @@ useUnicode=true
 pool_size=100
 current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 cache.provider_class=org.hibernate.cache.internal.NoCacheProvide
+# Enable response compression
+server.compression.enabled=true
+# Compress the response only if the response size is at least 1KB
+server.compression.min-response-size=1024
+# Enable HTTP/2 support, if the current environment supports it
+server.http2.enabled=true
+# Maximum time the response should be cached (in seconds) 
+spring.resources.cache.cachecontrol.max-age=120
+spring.servlet.multipart.enabled=true
