--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,9 @@ server.port = 8080
 show-sql=true
 DriverClassName = com.mysql.cj.jdbc.Driver
 url=jdbc:mysql://localhost:3306/projectfinal?serverTimezone=UTC&characterEncoding=UTF-8
+#url=jdbc:mysql://3.223.185.12:3306/projectfinal?serverTimezone=UTC&characterEncoding=UTF-8
 name=root
-password=123456
+password=vannghiem881997
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 hibernate.hbm2ddl.auto=update
 charSet=utf8
