--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ DriverClassName = com.mysql.cj.jdbc.Driver
 url=jdbc:mysql://localhost:3306/projectfinal?serverTimezone=UTC&characterEncoding=UTF-8
 #url=jdbc:mysql://3.223.185.12:3306/projectfinal?serverTimezone=UTC&characterEncoding=UTF-8
 name=root
-password=vannghiem881997
+#password=vannghiem881997
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 hibernate.hbm2ddl.auto=update
 charSet=utf8
